Qt: cmake enhancement

--- a/QT/CMakeLists.txt
+++ b/QT/CMakeLists.txt
@@ -57,7 +57,64 @@ target_link_libraries(LDView ${X11_X11_LIB})
 target_link_libraries(LDView ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(LDView ${PNG_LIBRARIES} ${JPEG_LIBRARIES})
 
+include(ExternalProject)
+
+ExternalProject_Add(TRE
+	SOURCE_DIR ${CMAKE_SOURCE_DIR}/../TRE
+	CONFIGURE_COMMAND ""
+	DOWNLOAD_COMMAND ""
+	UPDATE_COMMAND ""
+	CONFIGURE_COMMAND ""
+	BUILD_IN_SOURCE 1
+	BUILD_COMMAND make POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST
+	INSTALL_COMMAND ""
+)
+
+ExternalProject_Add(TCFoundation
+	SOURCE_DIR ${CMAKE_SOURCE_DIR}/../TCFoundation
+	CONFIGURE_COMMAND ""
+	DOWNLOAD_COMMAND ""
+	UPDATE_COMMAND ""
+	CONFIGURE_COMMAND ""
+	BUILD_IN_SOURCE 1
+	BUILD_COMMAND make POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST\ -D_QT\ -I/usr/include/qt5
+	INSTALL_COMMAND ""
+)
+
+ExternalProject_Add(LDExporter
+	SOURCE_DIR ${CMAKE_SOURCE_DIR}/../LDExporter
+	CONFIGURE_COMMAND ""
+	DOWNLOAD_COMMAND ""
+	UPDATE_COMMAND ""
+	CONFIGURE_COMMAND ""
+	BUILD_IN_SOURCE 1
+	BUILD_COMMAND make POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST
+	INSTALL_COMMAND ""
+)
+
+ExternalProject_Add(LDLoader
+	SOURCE_DIR ${CMAKE_SOURCE_DIR}/../LDLoader
+	CONFIGURE_COMMAND ""
+	DOWNLOAD_COMMAND ""
+	UPDATE_COMMAND ""
+	CONFIGURE_COMMAND ""
+	BUILD_IN_SOURCE 1
+	BUILD_COMMAND make POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST
+	INSTALL_COMMAND ""
+)
+
+ExternalProject_Add(LDLib
+	SOURCE_DIR ${CMAKE_SOURCE_DIR}/../LDLib
+	CONFIGURE_COMMAND ""
+	DOWNLOAD_COMMAND ""
+	UPDATE_COMMAND ""
+	CONFIGURE_COMMAND ""
+	BUILD_IN_SOURCE 1
+	BUILD_COMMAND make POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST
+	INSTALL_COMMAND ""
+)
+
 get_cmake_property(_variableNames VARIABLES)
 foreach (_variableName ${_variableNames})
-#   message(STATUS "${_variableName}=${${_variableName}}")
+   message(STATUS "${_variableName}=${${_variableName}}")
 endforeach()
