--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,9 +18,7 @@ build_script:
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /t:Launcher /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:SolutionDir=C:\projects\ldview\ /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:SolutionDir=C:\projects\ldview\ /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-- cmd: if exist "\Program Files (x86)\Inno Setup 6\iscc.exe" cd "\Program Files (x86)\Inno Setup 6"
-- cmd: if exist "\Program Files (x86)\Inno Setup 5\iscc.exe" cd "\Program Files (x86)\Inno Setup 5"
-- cmd: iscc.exe C:\projects\ldview\LDView64.iss
+- cmd: if exist "\Program Files (x86)\Inno Setup 6\iscc.exe" "\Program Files (x86)\Inno Setup 6\iscc.exe" C:\projects\ldview\LDView64.iss
 
 skip_commits:
   files:
