--- a/.travis.yml
+++ b/.travis.yml
@@ -89,6 +89,7 @@ jobs:
     env:
      - JOB="Visual Studio 2017 Build Tools"
      - MSBUILD_PATH="/C/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin"
+  - os: freebsd
 
 before_install:
 # - if [[ "$QT_BASE" = "48"  && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo add-apt-repository ppa:beineri/opt-qt487-$TRAVIS_DIST -y; fi
@@ -129,6 +130,7 @@ install:
   - if [[ "$QT_BASE" = "513" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
   - if [[ "$QT_BASE" = "514" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
   - if [[ "$QT_BASE" = "515" && "$TRAVIS_OS_NAME" = "linux" ]]; then sudo apt-get install -qq qt${QT_BASE}base; source /opt/qt${QT_BASE}/bin/qt${QT_BASE}-env.sh; fi
+  - if [ "$TRAVIS_OS_NAME" = "freebsd" ]; then sudo pkg install -y qt5-gui qt5-opengl qt5-linguist qt5-widgets qt5-buildtools qt5-qmake gl2ps tinyxml gmake libosmesa mesa-devel lib3ds desktop-file-utils shared-mime-info ; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
       sudo apt-get install -qq libglu1-mesa-dev libosmesa6-dev libgl2ps-dev libtinyxml-dev;
       if [[ "$QT_BASE" = "" && "$DOCKER" = "" ]] ; then
@@ -164,4 +166,8 @@ script:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then
       export PATH=$MSBUILD_PATH:$PATH;
       msbuild.exe LDView.vcxproj;
+    fi
+  - if [ "$TRAVIS_OS_NAME" = "freebsd" ]; then
+      cd QT;
+      sudo ./freebsd.sh;
     fi
