--- a/QT/freebsd/Makefile
+++ b/QT/freebsd/Makefile
@@ -5,7 +5,7 @@ PORTREVISION=	1
 CATEGORIES=	graphics
 USE_GITHUB=	yes
 GH_ACCOUNT=	tcobbs
-GH_TAGNAME=	82a91ea
+GH_TAGNAME=	HEAD
 MAINTAINER=	pbartfai@stardust.hu
 COMMENT=	LDraw model viewer
 WRKSRC_SUBDIR=	QT
