--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install developement packages
         run:  sudo ./QT/docker/install-devel-packages.sh
       - name: Build LDView
-        run: pwd ; ls ; cd QT ; sed -i 's/kdelibs5-dev//g' debian/control ; ./makedeb -qt5
+        run: cd QT ; sed -i 's/kdelibs5-dev//g' debian/control ; ./makedeb -qt5
   
   build-fedora:
     runs-on: ubuntu-20.04
