--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,15 +5,31 @@ build:
   project: LDView.vcxproj
   verbosity: minimal
 
-image:
-- Visual Studio 2019
-- ubuntu2004
+cache:
+  - Build
+  - LDLib/.obj-qt5
+  - TRE/.obj-qt5
+  - LDLoader/.obj-qt5
+  - TCFoundation/.obj-qt5
+  - LDExporter/.obj-qt5
+  - QT/.obj-qt5
+  
+environment:
+  matrix:
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      QT: 5.15
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      QT: 6.0
 
 install:
-- sh: sudo apt-get update; sudo apt-get install -y -qq libpng-dev libjpeg-dev libtinyxml-dev libgl2ps-dev qtbase5-dev qt5-qmake qttools5-dev-tools libqt5opengl5-dev cmake libgl1-mesa-dev libosmesa6-dev build-essential debhelper lintian fakeroot extra-cmake-modules libkf5kio-dev libkf5kdelibs4support5-bin
+- sh: sudo apt-get update -qq
+- sh: sudo apt-get install -y -qq --no-install-recommends libpng-dev libjpeg-dev libtinyxml-dev libgl2ps-dev libgl1-mesa-dev libglu1-mesa-dev
+- sh: if [ -z "$QT" ] ; then sudo apt-get install -y -qq --no-install-recommends qtbase5-dev qt5-qmake qttools5-dev-tools libqt5opengl5-dev cmake libosmesa6-dev build-essential debhelper lintian fakeroot extra-cmake-modules libkf5kio-dev libkf5kdelibs4support5-bin ; fi
 
 build_script:
-- sh: cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; ./makedeb -qt5
+- sh: cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; if [ -n "$QT" ] ; then $HOME/Qt/$QT/gcc_64/bin/qmake -spec linux-g++-64 ; make ; else ./makedeb -qt5 ; fi
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /t:Launcher /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:SolutionDir=C:\projects\ldview\ /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
