GitHub Action: VS2022 fix
add msbuild path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Add MSBuild to PATH
+        uses: microsoft/setup-msbuild@v1.0.3
+        with:
+            vs-prerelease: true
       - name: Build LDView
         shell: cmd
         run: |
