Appveyor: Qt 6.2 added

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,8 @@ environment:
       QT: 6.0
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
       QT: 6.1
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
+      QT: 6.2
 
 install:
 - sh: sudo apt-get update -qq
