--- a/Translations/Hungarian/LDView.rc
+++ b/Translations/Hungarian/LDView.rc
@@ -451,30 +451,31 @@ IDD_SAVE_OPTIONS DIALOGEX 0, 0, 289, 132
 STYLE DS_SETFONT | DS_3DLOOK | DS_FIXEDSYS | DS_CONTROL | WS_CHILD | WS_CLIPSIBLINGS
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "     ",IDC_SAVE_SERIES_BOX,4,0,132,49,0,0,HIDC_SAVE_SERIES_BOX
-    CONTROL         "Pillanatkés sorozatok mentése",IDC_SAVE_SERIES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,0,83,10,WS_EX_TRANSPARENT,HIDC_SAVE_SERIES
-    RTEXT           "Számjegyek száma:",IDC_SAVE_DIGITS_LABEL,12,13,55,8,0,0,HIDC_SAVE_DIGITS_LABEL
-    EDITTEXT        IDC_SAVE_DIGITS,72,11,22,12,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER,0,HIDC_SAVE_DIGITS
-    CONTROL         "Spin1",IDC_SAVE_DIGITS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,88,11,11,12,0,HIDC_SAVE_DIGITS_SPIN
-    GROUPBOX        "Egyéb",IDC_MISC_BOX,141,0,132,49,0,0,HIDC_MISC_BOX
-    CONTROL         "Ne használjon Pixel Buffer-t",IDC_IGNORE_PBUFFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,13,83,10,0,HIDC_IGNORE_PBUFFER
-    GROUPBOX        "     ",IDC_SAVE_ACTUAL_SIZE_BOX,4,51,132,47,0,0,HIDC_SAVE_ACTUAL_SIZE_BOX
-    CONTROL         "Kép mentése megadott méretben",IDC_SAVE_ACTUAL_SIZE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,51,108,10,WS_EX_TRANSPARENT,HIDC_SAVE_ACTUAL_SIZE
-    LTEXT           "Szélesség:",IDC_SAVE_WIDTH_LABEL,12,65,23,8,WS_DISABLED,WS_EX_RIGHT,HIDC_SAVE_WIDTH_LABEL
-    EDITTEXT        IDC_SAVE_WIDTH,39,65,40,12,ES_AUTOHSCROLL | ES_NUMBER | WS_DISABLED,0,HIDC_SAVE_WIDTH
-    LTEXT           "Magasság:",IDC_SAVE_HEIGHT_LABEL,12,81,23,8,WS_DISABLED,WS_EX_RIGHT,HIDC_SAVE_HEIGHT_LABEL
-    EDITTEXT        IDC_SAVE_HEIGHT,39,81,40,12,ES_AUTOHSCROLL | ES_NUMBER | WS_DISABLED,0,HIDC_SAVE_HEIGHT
-    CONTROL         "Teljes méretre nagyít",IDC_SAVE_ZOOMTOFIT,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,82,75,51,10,0,HIDC_SAVE_ZOOMTOFIT
     PUSHBUTTON      "Opciók...",IDC_SAVE_OPTIONS,239,11,50,14
-    CONTROL         "Átlátszó háttér",IDC_TRANSPARENT_BACKGROUND,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,24,95,10
-    CONTROL         "Automata vágás",IDC_AUTO_CROP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,35,47,10
-    GROUPBOX        "                      ",IDC_ALL_STEPS_BOX,141,51,132,47
-    CONTROL         "Minden lépést",IDC_ALL_STEPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,51,43,10,WS_EX_TRANSPARENT
-    LTEXT           "Utótag:",IDC_STEP_SUFFIX_LABEL,149,64,20,8,WS_DISABLED
-    EDITTEXT        IDC_STEP_SUFFIX,172,62,94,12,ES_AUTOHSCROLL | WS_DISABLED
-    CONTROL         "Ugyanaz a skála",IDC_SAME_SCALE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,172,77,54,10
+    GROUPBOX        "     ",IDC_SAVE_SERIES_BOX,4,0,132,73,0,0,HIDC_SAVE_SERIES_BOX
+    CONTROL         "Pillanatkés sorozatok mentése",IDC_SAVE_SERIES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,0,83,10,WS_EX_TRANSPARENT,HIDC_SAVE_SERIES
+    RTEXT           "Számjegyek száma:",IDC_SAVE_DIGITS_LABEL,12,13,58,8,0,0,HIDC_SAVE_DIGITS_LABEL
+    EDITTEXT        IDC_SAVE_DIGITS,75,11,22,12,ES_AUTOHSCROLL | ES_READONLY | ES_NUMBER,0,HIDC_SAVE_DIGITS
+    CONTROL         "Spin1",IDC_SAVE_DIGITS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,91,11,11,12,0,HIDC_SAVE_DIGITS_SPIN
+    GROUPBOX        "     ",IDC_SAVE_ACTUAL_SIZE_BOX,4,75,132,47,0,0,HIDC_SAVE_ACTUAL_SIZE_BOX
+    CONTROL         "Kép mentése megadott méretben",IDC_SAVE_ACTUAL_SIZE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,75,108,10,WS_EX_TRANSPARENT,HIDC_SAVE_ACTUAL_SIZE
+    LTEXT           "Szélesség:",IDC_SAVE_WIDTH_LABEL,12,89,23,8,WS_DISABLED,WS_EX_RIGHT,HIDC_SAVE_WIDTH_LABEL
+    EDITTEXT        IDC_SAVE_WIDTH,39,89,40,12,ES_AUTOHSCROLL | ES_NUMBER | WS_DISABLED,0,HIDC_SAVE_WIDTH
+    LTEXT           "Magasság:",IDC_SAVE_HEIGHT_LABEL,12,105,23,8,WS_DISABLED,WS_EX_RIGHT,HIDC_SAVE_HEIGHT_LABEL
+    EDITTEXT        IDC_SAVE_HEIGHT,39,105,40,12,ES_AUTOHSCROLL | ES_NUMBER | WS_DISABLED,0,HIDC_SAVE_HEIGHT
+    CONTROL         "Teljes méretre nagyít",IDC_SAVE_ZOOMTOFIT,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,82,99,51,10,0,HIDC_SAVE_ZOOMTOFIT
+    GROUPBOX        "Egyéb",IDC_MISC_BOX,141,0,132,73,0,0,HIDC_MISC_BOX
+    CONTROL         "Ne használjon Pixel Buffer-t",IDC_IGNORE_PBUFFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,13,83,10,0,HIDC_IGNORE_PBUFFER
+    CONTROL         "Don't use Framebuffer Object",IDC_IGNORE_FBO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,25,120,10,0,HIDC_IGNORE_FBO
+    CONTROL         "Don't use Custom Pixel Formats",IDC_IGNORE_PIXEL_FORMAT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,37,120,10,0,HIDC_IGNORE_PIXEL_FORMAT
+    CONTROL         "Átlátszó háttér",IDC_TRANSPARENT_BACKGROUND,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,48,95,10,0,HIDC_TRANSPARENT_BACKGROUND
+    CONTROL         "Automata vágás",IDC_AUTO_CROP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,59,47,10,0,HIDC_AUTO_CROP
+    GROUPBOX        "                      ",IDC_ALL_STEPS_BOX,141,75,132,47,0,0,HIDC_ALL_STEPS_BOX
+    CONTROL         "Minden lépést",IDC_ALL_STEPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,149,75,43,10,WS_EX_TRANSPARENT,HIDC_ALL_STEPS
+    LTEXT           "Utótag:",IDC_STEP_SUFFIX_LABEL,149,88,20,8,WS_DISABLED,0,HIDC_STEP_SUFFIX_LABEL
+    EDITTEXT        IDC_STEP_SUFFIX,172,86,94,12,ES_AUTOHSCROLL | WS_DISABLED,0,HIDC_STEP_SUFFIX
+    CONTROL         "Ugyanaz a skála",IDC_SAME_SCALE,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,172,101,54,10,0,HIDC_SAME_SCALE
 END
 
 IDD_PRIMITIVES_PREFS DIALOGEX 0, 0, 310, 252
