--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,18 +27,14 @@ environment:
       QT: 6.3
 
 install:
-- sh: sudo apt-get update -qq
-- sh: sudo apt-get install -y -qq --no-install-recommends libpng-dev libjpeg-dev libtinyxml-dev libgl2ps-dev libgl1-mesa-dev libglu1-mesa-dev
-- sh: if [ -z "$QT" ] ; then sudo apt-get install -y -qq --no-install-recommends qtbase5-dev qt5-qmake qttools5-dev-tools libqt5opengl5-dev cmake libosmesa6-dev build-essential debhelper lintian fakeroot extra-cmake-modules libkf5kio-dev libkf5kdelibs4support5-bin ; fi
+- sh: if [ `uname -s` = Linux ] ; then sudo apt-get update -qq ; fi
+- sh: if [ `uname -s` = Linux ] ; then sudo apt-get install -y -qq --no-install-recommends libpng-dev libjpeg-dev libtinyxml-dev libgl2ps-dev libgl1-mesa-dev libglu1-mesa-dev ; fi
+- sh: if [ `uname -s` = Linux ] ; then if [ -z "$QT" ] ; then sudo apt-get install -y -qq --no-install-recommends qtbase5-dev qt5-qmake qttools5-dev-tools libqt5opengl5-dev cmake libosmesa6-dev build-essential debhelper lintian fakeroot extra-cmake-modules libkf5kio-dev libkf5kdelibs4support5-bin ; fi ; fi
 
 build_script:
-- sh: cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; if [ -n "$QT" ] ; then $HOME/Qt/$QT/gcc_64/bin/qmake -spec linux-g++-64 ; make ; else ./makedeb -qt5 ; fi
+- sh: if [ `uname -s` = Linux ] ; then cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; if [ -n "$QT" ] ; then $HOME/Qt/$QT/gcc_64/bin/qmake -spec linux-g++-64 ; make ; else ./makedeb -qt5 ; fi ; fi
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /t:Launcher /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:SolutionDir=C:\projects\ldview\ /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:SolutionDir=C:\projects\ldview\ /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: if exist "\Program Files (x86)\Inno Setup 6\iscc.exe" "\Program Files (x86)\Inno Setup 6\iscc.exe" C:\projects\ldview\LDView64.iss
-
-skip_commits:
-  files:
-    - MacOSX/
