--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,6 +25,7 @@ environment:
       QT: 6.2
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
       QT: 6.3
+    - APPVEYOR_BUILD_WORKER_IMAGE: macos-bigsur
 
 install:
 - sh: if [ `uname -s` = Linux ] ; then sudo apt-get update -qq ; fi
@@ -33,6 +34,7 @@ install:
 
 build_script:
 - sh: if [ `uname -s` = Linux ] ; then cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; if [ -n "$QT" ] ; then $HOME/Qt/$QT/gcc_64/bin/qmake -spec linux-g++-64 ; make ; else ./makedeb -qt5 ; fi ; fi
+- sh: if [ `uname -s` = Darwin ] ; then cd MacOSX/LDView ; xcodebuild ; fi
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /t:Launcher /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:SolutionDir=C:\projects\ldview\ /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
