--- a/QT/docker/Dockerfile-appimage
+++ b/QT/docker/Dockerfile-appimage
@@ -1,5 +1,6 @@
 FROM opensuse/leap:42.3
 MAINTAINER Peter Bartfai pbartfai@stardust.hu
+RUN zypper mr -d "OSS Update"
 RUN zypper --non-interactive install git rpm-build rpmlint libqt5-qtbase-devel libqt5-linguist zlib-devel libpng16-compat-devel libjpeg8-devel wget glu-devel gl2ps-devel tinyxml-devel
 VOLUME /mnt/lego
 RUN git clone https://github.com/tcobbs/ldview
