--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ environment:
       QT: 6.2
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2004
       QT: 6.3
-    - APPVEYOR_BUILD_WORKER_IMAGE: macos-bigsur
+    - APPVEYOR_BUILD_WORKER_IMAGE: macos-monterey
 
 install:
 - sh: if [ `uname -s` = Linux ] ; then sudo apt-get update -qq ; fi
