--- a/Translations/Czech/LDView.rc
+++ b/Translations/Czech/LDView.rc
@@ -1323,8 +1323,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 4,4,2,1
- PRODUCTVERSION 4,4,2,1
+ FILEVERSION 4,5,0,0
+ PRODUCTVERSION 4,5,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x9L
@@ -1341,12 +1341,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "3D Lego Model Viewer for models in LDraw format."
             VALUE "FileDescription", "LDView"
-            VALUE "FileVersion", "4.4.2 Test 1"
+            VALUE "FileVersion", "4.5"
             VALUE "InternalName", "LDView"
-            VALUE "LegalCopyright", "Copyright © 2022 Travis Cobbs & Peter Bartfai"
+            VALUE "LegalCopyright", "Copyright © 2023 Travis Cobbs & Peter Bartfai"
             VALUE "OriginalFilename", "LDView.exe"
             VALUE "ProductName", "LDView"
-            VALUE "ProductVersion", "4.4.2 Test 1"
+            VALUE "ProductVersion", "4.5"
         END
     END
     BLOCK "VarFileInfo"
