--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ environment:
       QT: 6.5
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
       QT: 6.6
-    - APPVEYOR_BUILD_WORKER_IMAGE: macos-monterey
+    - APPVEYOR_BUILD_WORKER_IMAGE: macos-sonoma
 
 install:
 - sh: if [ `uname -s` = Linux ] ; then sudo apt-get update -qq ; fi
