--- a/QT/APKBUILD
+++ b/QT/APKBUILD
@@ -8,8 +8,8 @@ url="http://github.com/tcobbs/ldview"
 arch="all"
 license="GPL"
 #Qt5.x
-depends="qt5-qtbase libpng libjpeg-turbo"
-makedepends="qt5-qtbase-dev qt5-qttools-dev glu-dev libjpeg-turbo-dev make cmake extra-cmake-modules"
+depends="qt5-qtbase libpng libjpeg-turbo minizip"
+makedepends="qt5-qtbase-dev qt5-qttools-dev glu-dev libjpeg-turbo-dev make cmake extra-cmake-modules minizip-dev"
 #source="ldview-git.tar.gz"
 subpackages="$pkgname-osmesa"
 
