--- a/TCFoundation/Makefile
+++ b/TCFoundation/Makefile
@@ -1,10 +1,10 @@
 EXECS= libTCFoundation$(POSTFIX).a
-CFLAGSLOC = -O3
+CFLAGSLOC = -O3 -DUNZIP_CMD
 HOSTLIBS =
 
 -include ../Makefile.inc
 
-debug: CFLAGSLOC = -g
+debug: CFLAGSLOC = -g -DUNZIP_CMD
 debug: all
 
 -include .depend
