--- a/QT/docker/Dockerfile-opensuse_latest
+++ b/QT/docker/Dockerfile-opensuse_latest
@@ -1,6 +1,7 @@
 FROM opensuse/leap:latest
 MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
+ARG LDVIEW_BRANCH=master
 ADD install-devel-packages.sh /
 RUN ./install-devel-packages.sh
 VOLUME /mnt/lego
