Windows translation: rc files synced

--- a/Translations/Hungarian/LDView.rc
+++ b/Translations/Hungarian/LDView.rc
@@ -191,17 +191,6 @@ BEGIN
     LTEXT           "Jean-loup Gailly, Mark Adler, és a zlib csapat többi tagjának\nGlenn Randers-Pehrson és a libpng csapat többi tagjának",IDC_STATIC,25,145,203,18
 END
 
-IDD_LDRAWDIR DIALOGEX 0, 0, 221, 63
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "LDraw útvonal"
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
-BEGIN
-    LTEXT           "Kérem adja meg az LDraw útvonalát:",IDC_STATIC,8,4,111,8
-    EDITTEXT        IDC_LDRAWDIR,7,18,208,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,110,43,50,14
-    PUSHBUTTON      "Mégsem",IDCANCEL,165,43,50,14
-END
-
 IDD_LOAD_PROGRESS DIALOGEX 0, 0, 228, 41
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION
 CAPTION "LDView"
@@ -254,6 +243,23 @@ BEGIN
     CONTROL         "Véletlen Beállítás-készlet",IDC_SS_RANDOM_PREF_SET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,142,92,10,0,HIDC_SS_RANDOM_PREF_SET
     CONTROL         "Sleep Mode work-around",IDC_SS_SLEEP,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,7,153,95,10,0,HIDC_SS_SLEEP
     PUSHBUTTON      "Visszaállítás",IDC_SS_RESET,203,214,50,14,0,0,HIDC_SS_RESET
+END
+
+IDD_LDRAW_PREFS DIALOGEX 0, 0, 288, 188
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "LDraw"
+FONT 8, "MS Shell Dlg", 0, 0, 0x1
+BEGIN
+    RTEXT           "LDraw Zip:",IDC_STATIC,7,10,36,8
+    EDITTEXT        IDC_LDRAW_ZIP,50,7,207,14,ES_AUTOHSCROLL,0,HIDC_LDRAW_ZIP
+    PUSHBUTTON      "Browse...",IDC_BROWSE_LDRAW_ZIP,263,7,40,14,0,0,HIDC_BROWSE_LDRAW_ZIP
+    RTEXT           "LDraw Dir:",IDC_STATIC,7,28,36,8
+    EDITTEXT        IDC_LDRAW_DIR,50,25,207,14,ES_AUTOHSCROLL,0,HIDC_LDRAW_DIR
+    PUSHBUTTON      "Browse...", IDC_BROWSE_LDRAW_DIR,263,25,40,14,0,0,HIDC_BROWSE_LDRAW_DIR
+    LTEXT           "Add and organize extra search directories below.",IDC_STATIC,7,45,219,10
+    LISTBOX         IDC_ESD_LIST,7,59,296,156,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_ESD_TOOLBAR,"ToolbarWindow32",WS_TABSTOP | 0x944,7,216,296,15
+    PUSHBUTTON      "&Reset",IDC_LDRAW_RESET,253,231,50,14,WS_GROUP,0,HIDC_LDRAW_RESET
 END
 
 IDD_GEOMETRY_PREFS DIALOGEX 0, 0, 310, 252
@@ -565,18 +571,6 @@ BEGIN
     PUSHBUTTON      "Mégsem",IDCANCEL,129,24,50,14
 END
 
-IDD_EXTRA_DIRS DIALOGEX 0, 0, 288, 188
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Extra keresési útvonalak"
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
-BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,231,7,50,14
-    PUSHBUTTON      "Mégsem",IDCANCEL,231,24,50,14
-    CONTROL         "",IDC_ESD_TOOLBAR,"ToolbarWindow32",WS_TABSTOP | 0x944,7,167,219,15
-    LISTBOX         IDC_ESD_LIST,7,21,219,145,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Alább tudja szervezni az extra keresési útvonalakat.",IDC_STATIC,7,7,219,10
-END
-
 IDD_INVISIBLE_COMMANDS DIALOGEX 0, 0, 320, 228
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Invisible Commands"
@@ -810,7 +804,7 @@ BEGIN
     PUSHBUTTON      "Mindent visszaállít",IDC_RESET,7,189,50,14
 END
 
-IDD_OPTIONS_CANVAS DIALOG  0, 0, 249, 218
+IDD_OPTIONS_CANVAS DIALOG 0, 0, 249, 218
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg"
 BEGIN
@@ -851,14 +845,6 @@ BEGIN
         BOTTOMMARGIN, 187
     END
 
-    IDD_LDRAWDIR, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 214
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 56
-    END
-
     IDD_LOAD_PROGRESS, DIALOG
     BEGIN
         LEFTMARGIN, 7
@@ -889,6 +875,14 @@ BEGIN
     END
 
     IDD_EFFECTS_PREFS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 303
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 245
+    END
+
+    IDD_LDRAW_PREFS, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 303
@@ -957,14 +951,6 @@ BEGIN
         RIGHTMARGIN, 179
         TOPMARGIN, 7
         BOTTOMMARGIN, 39
-    END
-
-    IDD_EXTRA_DIRS, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 281
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 181
     END
 
     IDD_INVISIBLE_COMMANDS, DIALOG
@@ -1128,8 +1114,6 @@ BEGIN
             MENUITEM "&Automatikusan frissít ha aktív",    ID_FILE_POLLING_AUTO
             MENUITEM "Automatikusan frissít",       ID_FILE_POLLING_BACKGROUND
         END
-        MENUITEM "L&Draw útvonal...",               ID_FILE_LDRAWDIR
-        MENUITEM "&Extra útvonalak...",             ID_FILE_EXTRADIRS
         MENUITEM "Adatbázis frissítése",            ID_FILE_CHECKFORLIBUPDATES
         MENUITEM SEPARATOR
         MENUITEM "Old&al beállítás...",             ID_FILE_PAGESETUP
@@ -1315,8 +1299,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 4,5,0,0
- PRODUCTVERSION 4,5,0,0
+ FILEVERSION 4,6,0,1
+ PRODUCTVERSION 4,6,0,1
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x9L
@@ -1333,12 +1317,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "3D Lego Model Viewer for models in LDraw format."
             VALUE "FileDescription", "LDView"
-            VALUE "FileVersion", "4.5"
+            VALUE "FileVersion", "4.6 Alpha 1"
             VALUE "InternalName", "LDView"
             VALUE "LegalCopyright", "Copyright © 2024 Travis Cobbs & Peter Bartfai"
             VALUE "OriginalFilename", "LDView.exe"
             VALUE "ProductName", "LDView"
-            VALUE "ProductVersion", "4.5"
+            VALUE "ProductVersion", "4.6 Alpha 1"
         END
     END
     BLOCK "VarFileInfo"
@@ -1698,6 +1682,8 @@ BEGIN
     HIDC_BLUE_NEUTRAL_FACES  "This option is only available while BFC is enabled.  Enabling it causes the faces of non-BFC-certified polygons to be drawn in blue.  This is mainly useful for part authors to allow them to correctly specify which direction faces should face in order to BFC certify their part files."
     HIDC_BROWSE_CUSTOM_CONFIG "Set the path of the file used for custom config."
     HIDC_BROWSE_EXPORT_DIR   "Set the default directory to use for Exports.\r\n\r\nModel: The default directory is the same directory as the currently loaded model.\r\n\r\nLast Saved Export: The default directory is whatever directory was used last.  (The first time you save an export, the default directory is the model's directory.)\r\n\r\nSpecified: The default directory is specified in the field to the right of the drop-down box.  Use the Browse... button to browse for a directory, or enter it in the field directly."
+    HIDC_BROWSE_LDRAW_DIR    "Set the LDraw directory.\r\n\r\nNote: Even if the LDraw Zip is set, this still must be set, and will be used to download unofficial parts from ldraw.org."
+    HIDC_BROWSE_LDRAW_ZIP    "Set the LDraw Parts Library Zip file.\r\n\r\nNote: If a file named ldrawunf.zip exists in the same directory as this file, it will automatically be searched for unofficial parts."
     HIDC_BROWSE_PARTS_LIST_DIR "Set the default directory to use for Parts Lists.\r\n\r\nModel: The default directory is the same directory as the currently loaded model.\r\n\r\nLast Saved Parts List: The default directory is whatever directory was used last.  (The first time you save a parts list, the default directory is the model's directory.)\r\n\r\nSpecified: The default directory is specified in the field to the right of the drop-down box.  Use the Browse... button to browse for a directory, or enter it in the field directly."
     HIDC_BROWSE_SNAPSHOTS_DIR "Set the default directory to use for Snapshots.\r\n\r\nModel: The default directory is the same directory as the currently loaded model.\r\n\r\nLast Saved Snapshot: The default directory is whatever directory was used last.  (The first time you save a snapshot, the default directory is the model's directory.)\r\n\r\nSpecified: The default directory is specified in the field to the right of the drop-down box.  Use the Browse... button to browse for a directory, or enter it in the field directly."
     HIDC_CHECK_PART_TRACKER  "Enabling this causes LDView to automatically check the LDraw.org Parts Tracker when it can’t find a file.  If the part exists on the Parts Tracker, it will automatically be downloaded and used.\r\n\r\nNote: If LDView fails to connect to the LDraw.org server while checking for an unofficial part, it will automatically disable this setting.  You have to manually re-enable it once you have a working Internet connection again."
@@ -1748,6 +1734,9 @@ BEGIN
     HIDC_IGNORE_FBO          "Enabling this option disables the use of a framebuffer object for snapshot rendering.  Use of a framebuffer object can result in a corrupt image on certain video cards with certain video drivers.  If your snapshots are corrupted, enable this.  Otherwise, leave it disabled."
     HIDC_IGNORE_PBUFFER      "Enabling this option disables the use of a pixel buffer for snapshot rendering.  Use of a pixel buffer can result in a corrupt image on certain video cards with certain video drivers.  If your snapshots are corrupted, enable this.  Otherwise, leave it disabled."
     HIDC_IGNORE_PIXEL_FORMAT "Enabling this option disables the use of custom pixel formats for snapshot rendering.  Use of custom pixel formats can result in a corrupt image on certain video cards with certain video drivers.  If your snapshots are corrupted, enable this.  Otherwise, leave it disabled."
+    HIDC_LDRAW_DIR           "This contains the full path to the LDraw directory.\r\n\r\nNote: Even if the LDraw Zip is set, this still must be set, and will be used to download unofficial parts from ldraw.org."
+    HIDC_LDRAW_RESET         "This resets all the LDraw preferences to their default values.  As with all other preference changes, you must hit OK or Apply for the reset values to go into effect."
+    HIDC_LDRAW_ZIP           "This contains the full path to the LDraw Parts Library Zip.\r\n\r\nNote: If a file named ldrawunf.zip exists in the same directory as this file, it will automatically be searched for unofficial parts."
     HIDC_LIGHTING            "Enabling this option enables lighting.  If you disable lighting, it is strongly recommended that you enable edge lines, unless you are in wireframe mode.  (Both edge lines and wireframe mode are on the Geometry tab.)"
     HIDC_LIGHTING_BOX        "Lighting-related settings."
     HIDC_LIGHTING_QUALITY    "This option is only available if lighting is enabled.  Selecting this enables high quality lighting.  The easiest way to see the difference between having this option on and off is with a baseplate.  If you angle a baseplate until the specular highlight becomes visible (it gets shiny), and then switch back and forth, you will see that the highlight is located in a specific location when high quality lighting is enabled, and covers the entire surface when it is disabled.  Enabling this can significantly decrease performance, especially with large models."
