Test code for using EGL instead of OSMesa if possible. Authored by Travis Cobbs. Code deactivated by default

--- a/OSMesa/Makefile
+++ b/OSMesa/Makefile
@@ -38,6 +38,10 @@ MAKEMODE = POSTFIX=-osmesa USE_BOOST=NO TESTING="$(TESTING)"
 
 CFLAGS = -o $(OBJDIR)/$*.o $(TESTING) -Wall -D_GNU_SOURCE -O3 $(EXPORT_3DS) -DHAVE_MINIZIP
 
+# Uncomment the following two lines to enable EGL support
+#CFLAGS += -DEGL
+#LIBS += -lEGL
+
 ifeq ("$(USE_CPP11)","YES")
 
 CFLAGS += -DUSE_CPP11 -std=c++11
