BuildPartsCatalog: linux debug build option added

--- a/BuildPartsCatalog/Makefile
+++ b/BuildPartsCatalog/Makefile
@@ -74,6 +74,10 @@ OBJS = $(COBJS) $(CCOBJS)
 .c.o:
 	$(CC) $(CFLAGS) $(INCLUDE) $(CFLAGSLOC) -c $<
 
+debug: CFLAGSLOC = -g -DUNZIP_CMD
+debug: MAKEMODE += debug
+debug: all
+
 all:    $(OBJDIR) BuildPartsCatalog
 
 ../TCFoundation/libTCFoundation$(POSTFIX).a:
